# gai-rag-svr

./: Dockerfile  docker-compose.yml  pyproject.toml  startup.sh
.devcontainer/: Dockerfile  Dockerfile.devcontainer  TODO.txt  devcontainer.json  postCreateCommand.sh
docs/: gai-rag-svr.ipynb
src/gai/rag/server/: gai_rag.py
src/gai/rag/server/api/: gai.yml  main.py  self-test.py
src/gai/rag/server/dalc/: Base.py  IndexedDocument.py  IndexedDocumentChunk.py  IndexedDocumentChunkGroup.py  RAGDBRepository.py  RAGVSRepository.py  __init__.py
src/gai/rag/server/dtos/: indexed_doc.py  indexed_doc_header.py
src/gai/rag/server/models/: ChunkInfoPydantic.py  IndexedDocumentChunkGroupPydantic.py  IndexedDocumentChunkPydantic.py  IndexedDocumentHeaderPydantic.py  IndexedDocumentPydantic.py
tests/integrationtest/: gai_rag.ipynb  rag_listener.py
tests/unittest/: RAGDBRepository_ordered_test.py  RAGDBRepository_test.py  RAGVSRepository_test.py  RAG_test.py  UT0040_RAG_API_test.py
