[tool.poetry]
name = "gai-rag-svr"
version = "0.200"
description = "Refer to https://gai-labs.github.io/gai for more information"
authors = ["kakkoii1337 <kakkoii1337@gmail.com>"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
packages = [
    { include = "gai/rag/server", from="./src"}
]
include = [
]

[tool.poetry.dependencies]
python = "^3.10, <3.12"
gai-sdk = "^0.257"
chromadb = "0.4.22"
debugpy = "1.8.5"
fastapi = "^0.112.0"
httpx = "^0.27.0"
instructorembedding = "1.0.1"
numpy = "^1.26.4, <2.0"
openai = "^1.40.0, <2.0.0"
pandas = "^1.1.5"
python-multipart = "^0.0.9"
PyMySQL = "^1.1.0"
sentencepiece = "0.1.99"
sentence_transformers = "2.2.2"
sqlalchemy = ">=2.0.0"
unstructured = {version = "0.12.0", extras = ["all-docs"]}
uvicorn = "^0.23.2"
torch = "2.2.0"
nvidia-cudnn-cu12 = "8.9.2.26"
nvidia-nccl-cu12 = "2.19.3"
triton = "2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
nox = "^2024.4.15"
twine = "^5.1.1"
"keyrings.alt" = "^5.0.1"
ipykernel = "^6.29.5"
toml = "^0.10.2"
flake8 = "^7.1.1"
pytest-ordering = "^0.6"

[build-system]
requires = ["poetry-core>=1.8.3"]
build-backend = "poetry.core.masonry.api"



